# simple_sqlx_example

./: Cargo.toml
src/: main.rs
