[package]
name = "actix-sqlx"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Actix-web:
actix-web = "4"
sqlx = { version = "0.5", features = ["runtime-tokio-native-tls", "postgres"] }
tokio = { version = "1", features = ["full"] }
async-std = { version = "1.8.0", features = ["attributes"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
futures = "0.3"
